style(client): do break words in content of leaflet popup to avoid text overflows

--- a/client/src/resources/elements/leaflet.scss
+++ b/client/src/resources/elements/leaflet.scss
@@ -6,6 +6,10 @@ leaflet .map {
     --map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);
 }
 
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    word-wrap: break-word;
+}
+
 [data-bs-theme=dark] {
     .map-tiles {
         filter: var(--map-tiles-filter, none);
